<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_actionbar_back" />

    <!--<com.scwang.smartrefresh.layout.SmartRefreshLayout-->
    <!--android:id="@+id/mSmartRefreshLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cf5f5f5"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp39"
                android:background="@color/cf5f5f5"
                android:gravity="center_vertical|left"
                android:paddingStart="@dimen/dp22"
                android:text="@string/str_basicinfo"
                android:textColor="@color/c464646"
                android:textSize="@dimen/sp14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_head"
                    android:textColor="@color/c464646" />


                <ImageView
                    android:id="@+id/ivArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp22"
                    android:drawableRight="@mipmap/ic_jiantou_right_black" />

                <ImageView
                    android:id="@+id/activity_personal_info_header"
                    android:layout_width="@dimen/dp36"
                    android:layout_height="@dimen/dp36"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp8"
                    android:layout_toStartOf="@id/ivArrow"
                    android:src="@mipmap/ic_head_mine_default" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginStart="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp12"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_name"
                    android:textColor="@color/c464646" />

                <EditText
                    android:id="@+id/activity_personal_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="@string/str_username"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginStart="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp12"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_phone_numb"
                    android:textColor="@color/c464646" />

                <TextView
                    android:id="@+id/activity_personal_info_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="1234678901"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginStart="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp12"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_gender"
                    android:textColor="@color/c464646" />

                <TextView
                    android:id="@+id/activity_personal_info_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/ic_jiantou_right_black"
                    android:drawablePadding="@dimen/dp8"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="男"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/dp1"-->
            <!--android:background="@color/cbfbfbf" />-->

            <!--实名认证-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp39"
                android:background="@color/cf5f5f5"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp22"
                android:text="@string/str_smrz" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/cbfbfbf" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_realname"
                    android:textColor="@color/c464646" />

                <TextView
                    android:id="@+id/activity_personal_info_realname"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="张三"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginStart="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp12"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_id"
                    android:textColor="@color/c464646" />

                <TextView
                    android:id="@+id/activity_personal_card_id"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="372389282828828282"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginStart="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp12"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_ssgs"
                    android:textColor="@color/c464646" />

                <TextView
                    android:id="@+id/activity_personal_company"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="银丰电子商务有限公司"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginStart="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp12"
                android:background="@color/cbfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp22"
                    android:text="@string/str_ssbm"
                    android:textColor="@color/c464646" />

                <TextView
                    android:id="@+id/activity_personal_department"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp56"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="@dimen/dp22"
                    android:text="运营部"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
    <!--</com.scwang.smartrefresh.layout.SmartRefreshLayout>-->
</LinearLayout>