<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <CheckBox
        android:visibility="gone"
        android:id="@+id/ri_me_meinvoice_item_checkbox_selected"
        style="@style/CustomCheckBoxTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:layout_marginLeft="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#fafafa" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginStart="@dimen/dp22"
            android:layout_marginEnd="@dimen/dp22"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/str_fflx"
                android:textColor="@color/c464646"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/ri_me_meinvoice_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:text="增值税普票"
                android:textColor="@color/c9c9c9c"
                android:textSize="@dimen/sp12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginStart="@dimen/dp22"
            android:layout_marginEnd="@dimen/dp22">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/str_dwmc"
                android:textColor="@color/c464646"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/ri_me_meinvoice_company_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:textColor="@color/c9c9c9c"
                android:textSize="@dimen/sp12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginStart="@dimen/dp22"
            android:layout_marginEnd="@dimen/dp22">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/str_sh"
                android:textColor="@color/c464646"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/ri_me_meinvoice_tax_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:textColor="@color/c9c9c9c"
                android:textSize="@dimen/sp12" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="@color/cf5f5f5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp42"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:id="@+id/llChooseDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ri_me_meinvoice_item_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="默认"
                    android:textColor="#464646"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ri_me_meinvoice_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDelete"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@mipmap/ic_me_meinvoice_deleite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp12"
                    android:text="@string/str_delete"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_toStartOf="@id/ri_me_meinvoice_item_delete"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@mipmap/ic_me_meinvoice_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp12"
                    android:text="@string/str_edit"
                    android:textColor="@color/c464646"
                    android:textSize="@dimen/sp14" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
